// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`greedyPack works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 99.625%;
        height: 49.19137466307278%;
        z-index: 3720000000401;
        transform: translateX(0.18820577164366373%) translateY(51.64383561643836%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":1.5,
      \\"f\\":188.5
    }",
    "points": Array [
      Object {
        "x": 2.5,
        "y": 189.5,
      },
      Object {
        "x": 2.5,
        "y": 554.5,
      },
      Object {
        "x": 799.5,
        "y": 554.5,
      },
      Object {
        "x": 799.5,
        "y": 189.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,1.5,188.5)",
    "translateX": 1.5,
    "translateY": 188.5,
    "zIndex": 3720000000401,
  },
]
`;

exports[`greedyPack works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 91.5934755332497%;
        height: 100%;
        z-index: 201101;
        transform: translateX(105.40890410958906%) translateY(0.12452948557088916%) rotate(90deg)
      ",
    "matrix": "{
      \\"a\\":3.073141277659607e-17,
      \\"b\\":0.5018820577164367,
      \\"c\\":-0.5018820577164367,
      \\"d\\":3.073141277659607e-17,
      \\"e\\":193.09535759096616,
      \\"f\\":0.49811794228355666
    }",
    "points": Array [
      Object {
        "x": 192.59347553324972,
        "y": 0.9999999999999933,
      },
      Object {
        "x": 9.40652446675034,
        "y": 1.0000000000000044,
      },
      Object {
        "x": 9.40652446675037,
        "y": 401,
      },
      Object {
        "x": 192.59347553324974,
        "y": 401,
      },
    ],
    "rotate": 90,
    "scale": 0.5018820577164367,
    "svgTransform": "matrix(3.073141277659607e-17,0.5018820577164367,-0.5018820577164367,3.073141277659607e-17,193.09535759096616,0.49811794228355666)",
    "translateX": 193.09535759096616,
    "translateY": 0.49811794228355666,
    "zIndex": 201101,
  },
]
`;

exports[`greedyPack works 3`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 99.5%;
        height: 49.75%;
        z-index: 2010000000100;
        transform: translateX(-0.25125628140703515%) translateY(50.502512562814076%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":-0.5,
      \\"f\\":100.5
    }",
    "points": Array [
      Object {
        "x": 0.5,
        "y": 101.5,
      },
      Object {
        "x": 199.5,
        "y": 101.5,
      },
      Object {
        "x": 199.5,
        "y": 300.5,
      },
      Object {
        "x": 0.5,
        "y": 300.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,-0.5,100.5)",
    "translateX": -0.5,
    "translateY": 100.5,
    "zIndex": 2010000000100,
  },
]
`;

exports[`greedyPack works 4`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 99.5%;
        height: 49.75%;
        z-index: 2010000000100;
        transform: translateX(-0.25125628140703515%) translateY(50.502512562814076%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1,
      \\"e\\":-0.5,
      \\"f\\":100.5
    }",
    "points": Array [
      Object {
        "x": 0.5,
        "y": 101.5,
      },
      Object {
        "x": 199.5,
        "y": 101.5,
      },
      Object {
        "x": 199.5,
        "y": 300.5,
      },
      Object {
        "x": 0.5,
        "y": 300.5,
      },
    ],
    "rotate": -0,
    "scale": 1,
    "svgTransform": "matrix(1,0,0,1,-0.5,100.5)",
    "translateX": -0.5,
    "translateY": 100.5,
    "zIndex": 2010000000100,
  },
]
`;
